--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -50,7 +50,7 @@
         app:layout_constraintVertical_bias="0.485" />
 
     <Button
-        android:id="@+id/addTaskButton"
+        android:id="@+id/leftButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ADD TASK"
